faceblur: Change gstfaceblur to C++.
Change the gstfaceblur.c file to cpp and add it into Makefile.
It is necessary to migrate the faceblur plugin to C++,
in order to load new and old classifiers, to make faceblur work
with newer versions of Opencv.

https://bugzilla.gnome.org/show_bug.cgi?id=753994

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -12,7 +12,7 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gstcvsmooth.c \
 			gstcvsobel.c \
 			gstedgedetect.c \
-			gstfaceblur.c \
+			gstfaceblur.cpp \
 			gsthanddetect.c \
 			gstpyramidsegment.c \
 			gsttemplatematch.c \
