edgedetect: Rename gstedgedetect.c to gstedgedetect.cpp for consistency.
Change the file extension to cpp and add it into Makefile for consistency
with other elements of opencv.

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -11,7 +11,7 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gstcvlaplace.c \
 			gstcvsmooth.c \
 			gstcvsobel.c \
-			gstedgedetect.c \
+			gstedgedetect.cpp \
 			gstfaceblur.cpp \
 			gsthanddetect.c \
 			gstpyramidsegment.c \
