waylandsink: replace the custom GstWlShmMemory with GstFdMemory

--- a/ext/wayland/Makefile.am
+++ b/ext/wayland/Makefile.am
@@ -14,6 +14,7 @@ libgstwaylandsink_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
 libgstwaylandsink_la_LIBADD = \
 	$(GST_PLUGINS_BASE_LIBS) \
 	-lgstvideo-$(GST_API_VERSION) \
+	-lgstallocators-$(GST_API_VERSION) \
 	$(WAYLAND_LIBS) \
 	$(top_builddir)/gst-libs/gst/wayland/libgstwayland-$(GST_API_VERSION).la
 libgstwaylandsink_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
