libs: rtp is no longer an independent subdir
https://bugzilla.gnome.org/show_bug.cgi?id=754344

--- a/gst-libs/gst/Makefile.am
+++ b/gst-libs/gst/Makefile.am
@@ -25,7 +25,7 @@ pbutils: video audio
 rtp: audio
 
 INDEPENDENT_SUBDIRS = \
-	tag audio fft rtp sdp video app
+	tag audio fft sdp video app
 
 .PHONY: independent-subdirs $(INDEPENDENT_SUBDIRS)
 
