qt: add support for building/running on android
Including:
- Necessary configure checks
- Necessary compile time platform checks
- Necessary runtime qt android platform detection
- Escaping GLsync definition with Qt's GLES2 implementation

https://bugzilla.gnome.org/show_bug.cgi?id=754466

--- a/ext/qt/Makefile.am
+++ b/ext/qt/Makefile.am
@@ -20,6 +20,7 @@ libgstqtsink_la_SOURCES = \
 	qtitem.cc \
 	gstqtsink.cc \
 	gstqtsink.h \
+	gstqtgl.h \
 	gstplugin.cc
 
 libgstqtsink_la_CXXFLAGS = \
