vpx: created common baseclass GstVPXEnc
GstVP8Enc and GstVP9Enc has almost 80% code in common.
created common baseclass GstVPXEnc for GstVP8Enc and GstVP9Enc

https://bugzilla.gnome.org/show_bug.cgi?id=755510

--- a/ext/vpx/Makefile.am
+++ b/ext/vpx/Makefile.am
@@ -3,6 +3,7 @@ plugin_LTLIBRARIES = \
 
 libgstvpx_la_SOURCES = \
         gstvpxdec.c \
+        gstvpxenc.c \
 	gstvp8dec.c \
 	gstvp8enc.c \
 	gstvp8utils.c \
