audiovisualizers: merge audiovisualizer base classes
These plugins now use the audiovisualizer base class in pbutils

https://bugzilla.gnome.org/show_bug.cgi?id=742875

--- a/gst/audiovisualizers/Makefile.am
+++ b/gst/audiovisualizers/Makefile.am
@@ -1,7 +1,6 @@
 plugin_LTLIBRARIES = libgstaudiovisualizers.la
 
 libgstaudiovisualizers_la_SOURCES = plugin.c \
-    gstaudiovisualizer.c gstaudiovisualizer.h \
     gstspacescope.c gstspacescope.h \
     gstspectrascope.c gstspectrascope.h \
     gstsynaescope.c gstsynaescope.h \
@@ -13,9 +12,12 @@ libgstaudiovisualizers_la_CFLAGS = $(GST_PLUGINS_BAD_CFLAGS) \
 libgstaudiovisualizers_la_LIBADD = \
 	$(GST_PLUGINS_BASE_LIBS) -lgstaudio-$(GST_API_VERSION) \
 	-lgstvideo-$(GST_API_VERSION) -lgstfft-$(GST_API_VERSION) \
-	$(GST_BASE_LIBS)  $(GST_LIBS) $(LIBM)
+	-lgstpbutils-$(GST_API_VERSION) $(GST_BASE_LIBS)  $(GST_LIBS) $(LIBM)
 libgstaudiovisualizers_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstaudiovisualizers_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)
 
-noinst_HEADERS = gstaudiovisualizer.h gstdrawhelpers.h \
-	gstspacescope.h gstspectrascope.h gstsynaescope.h gstwavescope.h
++noinst_HEADERS = gstdrawhelpers.h \
+	gstspacescope.h \
+	gstspectrascope.h \
+	gstsynaescope.h \
+	gstwavescope.h
