retinex: Change retinex to C++
Change the gstretinex.c file to cpp and add it into Makefile.
It is necessary to migrate the retinex element to C++,
because new Opencv API leaves obsolete functions like cvSmooth.
This element uses this function.

You can see in this link:
http://docs.opencv.org/modules/imgproc/doc/filtering.html?
highlight=cvsmooth#void cvSmooth(const CvArr* src, CvArr* dst,
int smoothtype, int size1, int size2, double sigma1, double sigma2)

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -19,7 +19,7 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gsttextoverlay.c \
 			gstmotioncells.c \
 			gstskindetect.c \
-			gstretinex.c \
+			gstretinex.cpp \
 			gstfacedetect.cpp \
 			gstsegmentation.cpp \
 			gstgrabcut.cpp \
