cvsmooth: port to C++
Change the file extension to cpp and add it into Makefile for consistency
with other elements of opencv and because Opencv not support C language in
new API 2.4.11.

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -9,7 +9,7 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gstcvequalizehist.c \
 			gstcverode.c \
 			gstcvlaplace.c \
-			gstcvsmooth.c \
+			gstcvsmooth.cpp \
 			gstcvsobel.c \
 			gstedgedetect.cpp \
 			gstfaceblur.cpp \
