skindetect: Change gstskindetect to C++
Change the file extension to cpp and add it into Makefile for consistency
with other elements of opencv and because Opencv not support C language in
new API 2.4.11.

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -18,7 +18,7 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gsttemplatematch.c \
 			gsttextoverlay.c \
 			gstmotioncells.c \
-			gstskindetect.c \
+			gstskindetect.cpp \
 			gstretinex.cpp \
 			gstfacedetect.cpp \
 			gstsegmentation.cpp \
