cvdilate: Change gstcvdilate to C++
Change the gstcvdilate.c file extension to cpp and add it into Makefile for
consistency with other elements of opencv and because Opencv not support C
language in new API 2.4.11.

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -4,7 +4,7 @@ plugin_LTLIBRARIES = libgstopencv.la
 libgstopencv_la_SOURCES = gstopencv.cpp \
 			gstopencvvideofilter.c \
 			gstopencvutils.c \
-			gstcvdilate.c \
+			gstcvdilate.cpp \
 			gstcvdilateerode.c \
 			gstcvequalizehist.c \
 			gstcverode.c \
