Revert "tracers: Only build getrusage() tracer if RUSAGE_THREAD is available"
This reverts commit 8ddbf76626a48420306869db1d171f854cc25310.

--- a/plugins/tracers/Makefile.am
+++ b/plugins/tracers/Makefile.am
@@ -1,7 +1,7 @@
 
 plugin_LTLIBRARIES = libgstcoretracers.la
 
-if HAVE_RUSAGE_THREAD
+if HAVE_GETRUSAGE
 RUSAGE_SOURCES = gstrusage.c
 else
 RUSAGE_SOURCES =
