--- a/.arcconfig
+++ b/.arcconfig
@@ -1,3 +1,5 @@
 {
-    "phabricator.uri" : "http://phabricator.freedesktop.org/"
+    "phabricator.uri" : "https://phabricator.freedesktop.org/",
+    "repository.callsign" : "GSTDEV",
+    "project": "GStreamer Validate"
 }
