cverode: Switch to C++
Switch gstcverode to C++ for consistency with other OpenCV elements, and
support of the new 2.4.11 API.

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -5,9 +5,9 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gstopencvvideofilter.c \
 			gstopencvutils.c \
 			gstcvdilate.cpp \
-			gstcvdilateerode.c \
+			gstcvdilateerode.cpp \
 			gstcvequalizehist.c \
-			gstcverode.c \
+			gstcverode.cpp \
 			gstcvlaplace.c \
 			gstcvsmooth.cpp \
 			gstcvsobel.c \
