cvequalizehist: Switch to C++
Switch gstcvequalizehist to C++ for consistency with other OpenCV elements,
and support of the new 2.4.11 API.

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -6,7 +6,7 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gstopencvutils.c \
 			gstcvdilate.cpp \
 			gstcvdilateerode.cpp \
-			gstcvequalizehist.c \
+			gstcvequalizehist.cpp \
 			gstcverode.cpp \
 			gstcvlaplace.c \
 			gstcvsmooth.cpp \
