cvlaplace: Switch to C++
Switch gstcvlaplace to C++ for consistency with other OpenCV elements, and
support of the new 2.4.11 API.

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -8,7 +8,7 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gstcvdilateerode.cpp \
 			gstcvequalizehist.cpp \
 			gstcverode.cpp \
-			gstcvlaplace.c \
+			gstcvlaplace.cpp \
 			gstcvsmooth.cpp \
 			gstcvsobel.c \
 			gstedgedetect.cpp \
