cvsobel: Switch to C++
Switch gstcvlsobel to C++ for consistency with other OpenCV elements, and
support of the new 2.4.11 API.

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -10,7 +10,7 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gstcverode.cpp \
 			gstcvlaplace.cpp \
 			gstcvsmooth.cpp \
-			gstcvsobel.c \
+			gstcvsobel.cpp \
 			gstedgedetect.cpp \
 			gstfaceblur.cpp \
 			gsthanddetect.cpp \
