textoverlay: Switch to C++
Switch gsttextoverlay to C++ for consistency with other OpenCV elements,
and support of the new 2.4.11 API.

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -16,7 +16,7 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gsthanddetect.cpp \
 			gstpyramidsegment.cpp \
 			gsttemplatematch.c \
-			gsttextoverlay.c \
+			gsttextoverlay.cpp \
 			gstmotioncells.c \
 			gstskindetect.cpp \
 			gstretinex.cpp \
