--- a/Makefile.am
+++ b/Makefile.am
@@ -96,6 +96,7 @@ CRUFT_DIRS = \
 	$(top_srcdir)/gst/hls \
 	$(top_srcdir)/gst/imagefreeze \
 	$(top_srcdir)/gst/invtelecine \
+	$(top_srcdir)/gst/liveadder \
 	$(top_srcdir)/gst/mpeg4videoparse \
 	$(top_srcdir)/gst/qtmux \
 	$(top_srcdir)/gst/rtpmux \
