opencv: motioncells: Switch to C++
Switch gstmotioncells to C++ for consistency with other OpenCV elements,
and support of the new 2.4.11 API.

https://bugzilla.gnome.org/show_bug.cgi?id=754148

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -17,7 +17,7 @@ libgstopencv_la_SOURCES = gstopencv.cpp \
 			gstpyramidsegment.cpp \
 			gsttemplatematch.c \
 			gsttextoverlay.cpp \
-			gstmotioncells.c \
+			gstmotioncells.cpp \
 			gstskindetect.cpp \
 			gstretinex.cpp \
 			gstfacedetect.cpp \
