gl/examples: add a live shader demo using the new GstGLSLStage
Implemented with videotestsrc ! glshader ! glupload ! gtkglsink

Errors on an invalid shader compilation are ignored however any error
provided by the glsl compiler is printed to stdout.

--- a/tests/examples/gtk/Makefile.am
+++ b/tests/examples/gtk/Makefile.am
@@ -9,7 +9,7 @@ gtksink_LDADD = $(GTK3_LIBS) \
 
 if USE_GTK3_GL
 if USE_GL
-noinst_PROGRAMS += gtkglsink
+noinst_PROGRAMS += gtkglsink glliveshader
 
 gtkglsink_SOURCES = gtkglsink.c
 gtkglsink_CFLAGS = $(GTK3_CFLAGS) \
@@ -20,5 +20,18 @@ gtkglsink_CFLAGS = $(GTK3_CFLAGS) \
 gtkglsink_LDADD = $(GTK3_LIBS) \
 	$(GST_LIBS) \
 	$(GL_LIBS)
+
+glliveshader_SOURCES = glliveshader.c
+glliveshader_CFLAGS = $(GTK3_CFLAGS) \
+	-I$(top_srcdir)/gst-libs \
+	-I$(top_builddir)/gst-libs \
+	$(GST_PLUGINS_BAD_CFLAGS) \
+	$(GST_PLUGINS_BASE_CFLAGS) \
+	$(GST_CFLAGS) \
+	$(GL_CFLAGS)
+glliveshader_LDADD = $(GTK3_LIBS) \
+	$(GST_LIBS) \
+	$(GL_LIBS) \
+	$(top_builddir)/gst-libs/gst/gl/libgstgl-$(GST_API_VERSION).la
 endif
 endif
