--- a/tools/gst-launch.1.in
+++ b/tools/gst-launch.1.in
@@ -429,7 +429,8 @@ When this environment variable is set, coloured debug output is disabled.
 When set to a filesystem path, store 'dot' files of pipeline graphs there.
 These can then later be converted into an image using the 'dot' utility from
 the graphviz set of tools, like this: dot foo.dot -Tsvg -o foo.svg (png or jpg
-are also possible as output format)
+are also possible as output format). There is also a utility called 'xdot'
+which allows you to view the .dot file directly without converting it first.
 .TP
 \fBGST_REGISTRY\fR
 Path of the plugin registry file. Default is
