--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ gst*orc.h
 /tests/examples/codecparsers/parse-vp8
 /tests/examples/gtk/gtkglsink
 /tests/examples/gtk/gtksink
+/tests/examples/gtk/glliveshader
 /tests/examples/shapewipe/shapewipe-example
 /tests/examples/jack/jack_client
 /tests/examples/opencv/gstmotioncells_dynamic_test
