--- a/configure.ac
+++ b/configure.ac
@@ -65,6 +65,7 @@ AG_GST_GETTEXT([gst-plugins-ugly-$GST_API_VERSION])
 dnl *** check for arguments to configure ***
 
 AG_GST_ARG_DISABLE_FATAL_WARNINGS
+AG_GST_ARG_ENABLE_EXTRA_CHECKS
 
 AG_GST_ARG_DEBUG
 AG_GST_ARG_PROFILING
